--- a/src/index.pug
+++ b/src/index.pug
@@ -7,9 +7,6 @@
     <title>NYT DEV TEST</title>
   </head>
   <body>
-    <main id="root">
-      <h1>innit</h1>
-      <h2>asf</h2>
-    </main>
+    include ./modules/main.pug
   </body>
 </html>
