nav basic styles

--- a/src/modules/partials/nav.pug
+++ b/src/modules/partials/nav.pug
@@ -1,3 +1,7 @@
 mixin nav
-  nav
-    h1 innit
+  nav.nav
+    .nav-container
+      img.nav-logo(src="./assets/Logo.png", alt="Penzi Logo")
+      .nav-language-toggle
+        button.toggle-button English
+        button.toggle-button.is-inactive Martian
