--- a/src/modules/main.pug
+++ b/src/modules/main.pug
@@ -1,7 +1,9 @@
 include ./partials/nav.pug
 include ./partials/footer.pug
+include ./partials/pagination.pug
 
 main#root
   +nav
-  .root-container
+  .articles-container
+  +pagination
   +footer
