--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "./styles/partials/nav";
 @import "./styles/partials/footer";
 @import "./styles/partials/article";
+@import "./styles/partials/pagination";
 
 * {
   box-sizing: border-box;
