--- a/src/index.scss
+++ b/src/index.scss
@@ -22,5 +22,9 @@ body {
   margin: 0 auto;
   max-width: 1440px;
   padding: 0 40px 0 95px;
+
+  @include max(breakpoint(lg)) {
+    padding: 0 20px;
+  }
 }
 
