--- a/src/styles/partials/_pagination.scss
+++ b/src/styles/partials/_pagination.scss
@@ -8,6 +8,10 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 45px 40px 70px 95px;
+
+  @include max(breakpoint(lg)) {
+    padding: 35px 20px 50px;
+  }
 }
 
 .pagination-content {
