martian language functionality

--- a/src/modules/partials/nav.pug
+++ b/src/modules/partials/nav.pug
@@ -3,5 +3,5 @@ mixin nav
     .nav-container
       img.nav-logo(src="./assets/Logo.png", alt="Penzi Logo")
       .nav-language-toggle
-        button.toggle-button English
-        button.toggle-button.is-inactive Martian
+        button.toggle-button.is-active#english-button English
+        button.toggle-button#martian-button Martian
