--- a/src/styles/partials/_article.scss
+++ b/src/styles/partials/_article.scss
@@ -42,10 +42,18 @@
   color: $black;
   text-decoration: none;
   width: 100%;
+
+  &:hover {
+    > .article-headline {
+      opacity: 0.6;
+    }
+  }
 }
 
 .article-headline {
   margin-bottom: 8px;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .article-summary {
